Add web deployment configuration for public hosting
 DEPLOYMENT READY:
 Added production entry point (app.py) with environment detection
 Created Procfile for platform compatibility (Render, Heroku, Railway)
 Added runtime.txt specifying Python 3.11
 Enhanced requirements.txt with FastAPI, uvicorn, and dependencies
 Updated web server for production hosting (0.0.0.0 binding)

 DOCUMENTATION:
 Comprehensive README.md with features and setup instructions
 Detailed DEPLOYMENT.md with step-by-step deployment guide
 .env.example template for environment configuration
 test_production.py for deployment validation

 SECURITY:
 Enhanced .gitignore for sensitive data protection
 Environment variable configuration for API keys
 Production-ready logging and error handling

 READY TO DEPLOY TO:
 Render (recommended - free tier available)
 Railway (simple GitHub integration)
 Heroku (popular platform)
 Any Python hosting service

The BUDDY AI Assistant is now ready for public web deployment!

--- a/.gitignore
+++ b/.gitignore
@@ -72,9 +72,12 @@ logs/
 
 # API Keys and sensitive data
 .env
+.env.local
+.env.production
 *.key
 config.ini
 secrets.json
+api_keys.txt
 
 # Database files
 *.db
