Fix timezone issue for hosted datetime functionality
 TIMEZONE ISSUE RESOLVED:
 Added proper timezone support using pytz library
 DateTime skill now respects TIMEZONE environment variable
 Defaults to Asia/Kolkata timezone (configurable)
 Shows timezone information in datetime responses

 TECHNICAL CHANGES:
 Updated DateTimeSkill to use timezone-aware datetime objects
 Added pytz dependency to requirements.txt
 Environment variable TIMEZONE for timezone configuration
 Enhanced datetime responses to show timezone info

 DEPLOYMENT UPDATES:
 Updated .env.example with timezone configuration
 Enhanced DEPLOYMENT.md with timezone setup instructions
 Added common timezone examples for easy configuration

 HOW TO FIX ON HOSTED SITE:
1. Set TIMEZONE environment variable (e.g., 'Asia/Kolkata')
2. Redeploy the application
3. Time will now show correctly in your timezone

This fixes the issue where hosted site showed wrong time (UTC instead of local time).

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,16 @@ PORT=8000
 ENVIRONMENT=production
 DEBUG=False
 
+# Timezone Configuration (Important for accurate time display)
+TIMEZONE=Asia/Kolkata
+# Other common timezones:
+# TIMEZONE=America/New_York (Eastern US)
+# TIMEZONE=America/Los_Angeles (Pacific US)  
+# TIMEZONE=Europe/London (UK)
+# TIMEZONE=Europe/Paris (Central Europe)
+# TIMEZONE=Asia/Tokyo (Japan)
+# TIMEZONE=Australia/Sydney (Australia)
+
 # API Keys (Set these in your hosting platform's environment variables)
 # GOOGLE_API_KEY=your_google_api_key_here
 # OPENAI_API_KEY=your_openai_api_key_here
