--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,14 @@ asyncio-mqtt>=0.11.0
 # Text processing and fuzzy matching
 rapidfuzz>=3.5.0
 
+# Date/time processing with timezone support
+python-dateutil>=2.8.2
+pytz>=2023.3
+
 # Audio processing (optional, for voice features)
 # pyaudio>=0.2.11
 # speech-recognition>=3.10.0
 # pyttsx3>=2.90
-
-# Data processing
-python-dateutil>=2.8.2
-pytz>=2023.3
 
 # Environment variables
 python-dotenv>=1.0.0
