--- a/learning_data/tasks.json
+++ b/learning_data/tasks.json
@@ -10,5 +10,17 @@
     "completed_at": null,
     "category": "general",
     "tags": []
+  },
+  {
+    "id": "c97d1d9b",
+    "title": ": call mom",
+    "description": "",
+    "priority": "medium",
+    "status": "pending",
+    "due_date": null,
+    "created_at": "2025-08-11T01:10:06.889543",
+    "completed_at": null,
+    "category": "general",
+    "tags": []
   }
 ]
