--- a/learning_data/tasks.json
+++ b/learning_data/tasks.json
@@ -22,5 +22,17 @@
     "completed_at": null,
     "category": "general",
     "tags": []
+  },
+  {
+    "id": "bebb9ec0",
+    "title": ": call mom",
+    "description": "",
+    "priority": "medium",
+    "status": "pending",
+    "due_date": null,
+    "created_at": "2025-08-11T01:51:43.748099",
+    "completed_at": null,
+    "category": "general",
+    "tags": []
   }
 ]
